--- a/app/src/main/res/layout/fragment_1.xml
+++ b/app/src/main/res/layout/fragment_1.xml
@@ -5,6 +5,7 @@
     <!--android:id="@+id/x_recycler_view"-->
     <!--android:layout_width="match_parent"-->
     <!--android:layout_height="match_parent" />-->
+
 <android.support.v4.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swipe_refresh_layout"
@@ -14,6 +15,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:padding="4dp" />
 
 </android.support.v4.widget.SwipeRefreshLayout>
