--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -7,41 +7,45 @@
     android:background="@color/grey2"
     android:fitsSystemWindows="true">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:elevation="0dp">
+        android:layout_height="match_parent">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/app_bar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+            android:layout_height="wrap_content"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-    </android.support.design.widget.AppBarLayout>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize" />
 
-    <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="6dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        </android.support.design.widget.AppBarLayout>
 
-        <LinearLayout
-            android:orientation="vertical"
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_margin="6dp"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <TextView
-                android:id="@+id/time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="6dp"
-                android:textSize="18sp" />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <!--<LinearLayout-->
+                <TextView
+                    android:id="@+id/time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="6dp"
+                    android:textSize="18sp" />
+
+                <!--<LinearLayout-->
                 <!--android:layout_width="match_parent"-->
                 <!--android:layout_height="match_parent"-->
                 <!--android:layout_marginTop="20dp"-->
@@ -49,26 +53,26 @@
                 <!--android:orientation="horizontal">-->
 
                 <!--<TextView-->
-                    <!--android:id="@+id/date"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:gravity="bottom"-->
-                    <!--android:text="22"-->
-                    <!--android:textSize="32sp"-->
-                    <!--android:textColor="@color/textPrimary"/>-->
+                <!--android:id="@+id/date"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:gravity="bottom"-->
+                <!--android:text="22"-->
+                <!--android:textSize="32sp"-->
+                <!--android:textColor="@color/textPrimary"/>-->
 
                 <!--<TextView-->
-                    <!--android:id="@+id/time"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginLeft="12dp"-->
-                    <!--android:gravity="bottom"-->
-                    <!--android:text="2017.12  ·  14:30  ·  星期五"-->
-                    <!--android:textSize="12sp"-->
-                    <!--android:textColor="@color/textPrimary" />-->
-            <!--</LinearLayout>-->
+                <!--android:id="@+id/time"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginLeft="12dp"-->
+                <!--android:gravity="bottom"-->
+                <!--android:text="2017.12  ·  14:30  ·  星期五"-->
+                <!--android:textSize="12sp"-->
+                <!--android:textColor="@color/textPrimary" />-->
+                <!--</LinearLayout>-->
 
-            <!--<View-->
+                <!--<View-->
                 <!--android:layout_width="match_parent"-->
                 <!--android:layout_height="1dp"-->
                 <!--android:layout_marginLeft="16dp"-->
@@ -76,57 +80,59 @@
                 <!--android:layout_marginBottom="4dp"-->
                 <!--android:background="#90909090" />-->
 
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="6dp"
-                app:cardCornerRadius="6dp">
-
-                <RelativeLayout
+                <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_margin="6dp"
+                    app:cardCornerRadius="6dp">
 
-                    <ImageView
-                        android:id="@+id/cover"
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/img_1" />
+                        android:layout_height="wrap_content">
 
-                    <TextView
-                        android:id="@+id/quote"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/cover"
-                        android:layout_margin="12dp"
-                        android:text="AAAAA"
-                        android:textColor="@color/textPrimary"
-                        android:textSize="20sp" />
+                        <ImageView
+                            android:id="@+id/cover"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:adjustViewBounds="true"
+                            android:src="@drawable/img_1" />
 
-                    <TextView
-                        android:id="@+id/quote_from"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/quote"
-                        android:layout_alignEnd="@id/quote"
-                        android:layout_alignRight="@id/quote"
-                        android:layout_marginBottom="12dp"
-                        android:text="BBBB" />
-                </RelativeLayout>
+                        <TextView
+                            android:id="@+id/quote"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/cover"
+                            android:layout_margin="12dp"
+                            android:text="AAAAA"
+                            android:textColor="@color/textPrimary"
+                            android:textSize="20sp" />
 
-            </android.support.v7.widget.CardView>
+                        <TextView
+                            android:id="@+id/quote_from"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/quote"
+                            android:layout_alignEnd="@id/quote"
+                            android:layout_alignRight="@id/quote"
+                            android:layout_marginBottom="12dp"
+                            android:text="BBBB" />
+                    </RelativeLayout>
 
-            <com.sendtion.xrichtext.RichTextView
-                android:id="@+id/content"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:textSize="16sp"
-                android:textColor="@color/textPrimary"
-                android:background="@color/grey_100"/>
+                </android.support.v7.widget.CardView>
 
-        </LinearLayout>
+                <com.sendtion.xrichtext.RichTextView
+                    android:id="@+id/content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:textSize="16sp"
+                    android:textColor="@color/textPrimary"
+                    android:background="@color/grey_100"/>
 
-    </android.support.v4.widget.NestedScrollView>
+            </LinearLayout>
+
+        </android.support.v4.widget.NestedScrollView>
+
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
