insert tab into toolbar

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -67,7 +67,7 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
 
-        <com.example.heronote.util.StateButton
+        <com.example.heronote.view.StateButton
             android:id="@+id/button_register"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -99,7 +99,7 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
 
-        <com.example.heronote.util.StateButton
+        <com.example.heronote.view.StateButton
             android:id="@+id/button_login"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
