--- a/app/src/main/res/layout/content_new.xml
+++ b/app/src/main/res/layout/content_new.xml
@@ -107,7 +107,7 @@
 
     </android.support.design.widget.TextInputLayout>
 
-    <com.sendtion.xrichtext.RichTextEditor
+    <com.example.heronote.view.MyRichTextEditor
         android:id="@+id/et_new_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -142,12 +142,20 @@
         app:normalBackgroundColor="@color/colorPrimaryDark"
         app:pressedBackgroundColor="@color/colorPrimaryDark" />
 
-    <ImageView
-        android:id="@+id/cover_pic"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="240dp"
-        android:background="@android:color/black"
-        android:scaleType="fitCenter"
-        android:visibility="gone" />
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        app:cardCornerRadius="6dp"
+        app:cardElevation="6dp">
+
+        <ImageView
+            android:id="@+id/cover_pic"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:visibility="gone" />
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
