--- a/app/src/main/res/layout/content_new.xml
+++ b/app/src/main/res/layout/content_new.xml
@@ -4,43 +4,41 @@
     android:id="@+id/content_new"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="6dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:orientation="horizontal">
+        android:layout_margin="6dp">
 
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_centerVertical="true"
             android:text="是否使用标题："/>
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/switch_compat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:typeface="normal"
             android:theme="@style/mySwitch"
             android:switchMinWidth="40dp"
             android:switchPadding="10dp"  />
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <EditText
         android:id="@+id/et_new_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="6dp"
         android:background="@null"
         android:hint="请输入标题"
         android:textSize="18sp"
-        android:textColor="#000000"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:textColor="@color/textPrimary"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="8dp"
         android:visibility="gone" />
@@ -48,114 +46,114 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp">
+        android:layout_margin="6dp">
 
         <TextView
             android:id="@+id/tv_new_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2017-12-22    星期五"
             android:textSize="14sp"
-            android:textColor="#000000"
-            android:layout_alignParentLeft="true"/>
+            android:textColor="@color/textPrimary" />
 
         <TextView
             android:id="@+id/tv_new_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:text="默认分组"
             android:textSize="14sp"
-            android:textColor="#000000"
-            android:layout_alignParentRight="true"/>
+            android:textColor="@color/textPrimary"/>
+
     </RelativeLayout>
 
-    <android.support.design.widget.TextInputLayout
+    <android.support.v7.widget.CardView
+        android:id="@+id/cover_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="12dp" >
+        android:layout_margin="6dp"
+        app:cardCornerRadius="6dp">
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/quote"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="输入引言："
-            android:inputType="text"
-            android:textSize="12sp"
-            android:textColor="#000000"/>
+            android:layout_height="wrap_content">
 
-    </android.support.design.widget.TextInputLayout>
+            <com.example.heronote.view.StateButton
+                android:id="@+id/cover_add_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="12dp"
+                android:padding="16dp"
+                android:text="插入封面"
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="4dp" >
+                app:radius="8dp"
+                app:round="true"
+                app:animationDuration="200"
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/quote_from"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="引自："
-            android:inputType="text"
-            android:textSize="12sp"
-            android:textColor="#000000"/>
+                app:normalStrokeWidth="2dp"
+                app:pressedStrokeWidth="2dp"
 
-    </android.support.design.widget.TextInputLayout>
+                app:normalStrokeColor="@android:color/white"
+                app:pressedStrokeColor="@android:color/white"
+
+                app:normalTextColor="@android:color/white"
+                app:pressedTextColor="@android:color/white"
+
+                app:normalBackgroundColor="@color/colorPrimaryDark"
+                app:pressedBackgroundColor="@color/colorPrimaryDark" />
+
+            <ImageView
+                android:id="@+id/cover_pic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:adjustViewBounds="true"
+                android:visibility="gone" />
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginEnd="12dp">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/quote"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="输入引言："
+                    android:inputType="text"
+                    android:textSize="12sp"
+                    android:textColor="@color/textPrimary" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp" >
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/quote_from"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="引自："
+                    android:inputType="text"
+                    android:textSize="12sp"
+                    android:textColor="@color/textPrimary" />
+
+            </android.support.design.widget.TextInputLayout>
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 
     <com.example.heronote.view.MyRichTextEditor
         android:id="@+id/et_new_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="6dp"
         android:textSize="16sp"
         android:textColor="@color/textPrimary"/>
-
-    <com.example.heronote.view.StateButton
-        android:id="@+id/add_cover_pic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="12dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:layout_gravity="center_horizontal"
-        android:text="添加 / 更换封面"
-
-        app:radius="8dp"
-        app:round="false"
-        app:animationDuration="200"
-
-        app:normalStrokeWidth="2dp"
-        app:pressedStrokeWidth="2dp"
-
-        app:normalStrokeColor="@android:color/white"
-        app:pressedStrokeColor="@android:color/white"
-
-        app:normalTextColor="@android:color/white"
-        app:pressedTextColor="@android:color/white"
-
-        app:normalBackgroundColor="@color/colorPrimaryDark"
-        app:pressedBackgroundColor="@color/colorPrimaryDark" />
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        app:cardCornerRadius="6dp"
-        app:cardElevation="6dp">
-
-        <ImageView
-            android:id="@+id/cover_pic"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:visibility="gone" />
-
-    </android.support.v7.widget.CardView>
 
 </LinearLayout>
