--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -11,7 +11,7 @@
         android:layout_width="120dp"
         android:layout_height="96dp"
         android:layout_marginTop="4dp"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginBottom="8dp"
         android:scaleType="fitEnd" />
 
