remove interface(longclick) in baseA coz of no use, searchview modified 压不住羞耻心，换了GitHub的名字。as升3.1且gradle升4.4，谷歌提示在app:build.gradle中的complie被implementation取代，且"will be removed at the end of 2018"，于是我都改了

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -9,7 +9,7 @@
     app:floatingSearch_searchBarMarginLeft="6dp"
     app:floatingSearch_searchBarMarginRight="6dp"
     app:floatingSearch_searchBarMarginTop="6dp"
-    app:floatingSearch_leftActionMode="showHome"
+    app:floatingSearch_leftActionMode="noLeftAction"
     app:layout_goneMarginLeft="0dp"
     app:floatingSearch_menu="@menu/search_menu"
     app:floatingSearch_close_search_on_keyboard_dismiss="true" />
