detailA toolbar menu mod search按钮无端变灰我也搞不清为啥。另外上次commit message说把compile改了结果实际上忘记改了/笑哭，这次补上了。

--- a/app/src/main/res/menu/toolbar_detail.xml
+++ b/app/src/main/res/menu/toolbar_detail.xml
@@ -10,7 +10,8 @@
 
     <item
         android:id="@+id/re_edit"
-        android:title="编辑"
-        app:showAsAction="never" />
+        android:icon="@mipmap/edit"
+        android:title="Edit"
+        app:showAsAction="ifRoom" />
 
 </menu>
