--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="12dp"
-            android:src="@mipmap/pencil"
+            android:src="@mipmap/edit"
             app:layout_behavior="com.example.heronote.view.ScrollAwareFABBehavior" />
 
     </android.support.design.widget.CoordinatorLayout>
