--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
 
                 <com.example.heronote.view.MyTabLayout
                     android:id="@+id/tab_layout"
-                    android:layout_width="wrap_content"
+                    android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     app:tl_iconHeight="24dp"
@@ -38,12 +38,6 @@
                     app:tl_indicator_style="TRIANGLE" />
 
             </android.support.v7.widget.Toolbar>
-
-            <!--<android.support.design.widget.TabLayout-->
-                <!--android:id="@+id/tab_layout"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--app:tabIndicatorColor="@android:color/white" />-->
 
         </android.support.design.widget.AppBarLayout>
 
